--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,16 +6,24 @@ permissions:
   contents: read
 
 jobs:
-  test:
-
+  run-tests:
+    name: Run tests (${{ matrix.python-version }})
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [ "2.7", "3.6", "3.7", "3.8", "3.9", "3.10", "3.11" ]
     runs-on: ubuntu-latest
-
+    container: python:${{ matrix.python-version }}
+    services:
+      ftrack:
+        image: ftrackdocker/test-server:latest
+        credentials:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+        ports:
+          - 80:80
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.9"
     - uses: actions/cache@v3
       id: cache
       with:
@@ -30,3 +38,7 @@ jobs:
     - name: Run pytest
       run: | 
         pytest
+      env:
+        FTRACK_SERVER: http://ftrack:80
+        FTRACK_API_USER: ${{ secrets.FTRACK_API_USER }}
+        FTRACK_API_KEY: ${{ secrets.FTRACK_API_KEY_UNITTEST }}
